:recycle: refactor: Clean code and Design Patterns apply